# meta-pytorch-hackathon

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  results.json
environment/: __init__.py  env.py
graders/: __init__.py  graders.py
server/: __init__.py  app.py
tasks/: __init__.py  tasks.py
tests/: test_environment.py
