[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "phantomshield-x"
version = "1.0.0"
description = "AI Cyber Defense Training Environment — OpenEnv-compliant simulation for the Meta PyTorch Hackathon"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "PhantomShield X Team" }
]
requires-python = ">=3.11"
keywords = ["openenv", "cybersecurity", "reinforcement-learning", "ai", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "gradio>=4.0,<6.0",
    "pyyaml>=6.0",
    "openai>=1.0,<2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
phantomshield-x = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "tasks*", "graders*"]

[tool.setuptools.package-data]
"*" = ["openenv.yaml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
